--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,9 @@
     <marquee behaviour="alternate"><h3>Site is Under Construction</h3></marquee>
     <center> <h1>Project By <font color="red">Tanny</font> && <font color="blue">Aditya</font> </h1></center>
 
+    <input type="text" name="convert-text">
+    <input type="text" name="changed-text">
+
 
 </body>
 </html>
