--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,10 @@
     <title>B1nCrypti0n</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
-<body>
-   <center> <h1>Welcome To B1nCrypti0n</h1></center>
-    <marquee behaviour="alternate"><h3>Site is Under Construction</h3></marquee>
-    <center> <h1>Project By <font color="red">Tanny</font> && <font color="blue">Aditya</font> </h1></center>
+<body bgcolor="black">
+   <center> <h1 style="color: green;">Welcome To B1nCrypti0n</h1></center>
+    <marquee behaviour="alternate"><h3 style="color: green;"">Site is Under Construction</h3></marquee>
+    <center> <h1>Project By <font color="green">Tanny</font> && <font color="green">Aditya</font> </h1></center>
 
   
 <center>
