added new things

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,16 @@
     <center> <h1>Project By <font color="green">Tanny</font> && <font color="green">Aditya</font> </h1></center>
 
   
+<form action="/convert">
 <center>
-    <textarea rows="6" cols="80"></textarea>
+    <textarea rows="6" cols="80" name="plaintext"></textarea>
     <br><br><br>
-    <textarea rows="6" cols="80"></textarea>
+    <textarea rows="6" cols="80" name="convertedText"></textarea>
+    <br><br><br>
+    <input type="submit" text="convert">
+
 </center>
+</form>
 
 
 
