--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <center> <h1>Project By <font color="green">Tanny</font> && <font color="green">Aditya</font> </h1></center>
 
   
-<form action="/convert">
+<form action="/convert" method="POST">
 <center>
     <textarea rows="6" cols="80" name="plaintext"></textarea>
     <br><br><br>
