--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
@@ -16,7 +15,7 @@
 <center>
     <textarea rows="6" cols="80" name="plaintext"></textarea>
     <br><br><br>
-    <textarea rows="6" cols="80" name="convertedText"></textarea>
+    <textarea rows="6" cols="80" name="convertedText"><%= data1 %></textarea>
     <br><br><br>
     <input type="submit" text="convert">
 
