code updated- whole code working fine

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>B1nCrypti0n</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <script src="../index.js"></script>
 </head>
 <body bgcolor="black">
    <center> <h1 style="color: green;">Welcome To B1nCrypti0n</h1></center>
@@ -15,7 +16,9 @@
 <center>
     <textarea rows="6" cols="80" name="plaintext"></textarea>
     <br><br><br>
-    <textarea rows="6" cols="80" name="convertedText"><%= data1 %></textarea>
+    <textarea rows="6" cols="80" name="convertedText"><%= convertit %></textarea>
+    <br><br><br>
+    <textarea rows="6" cols="80" name="againPlain"><%= againPlain %></textarea>
     <br><br><br>
     <input type="submit" text="convert">
 
