code updated- whole code working fine

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,11 @@
   
 <form action="/convert" method="POST">
 <center>
-    <textarea rows="6" cols="80" name="plaintext"></textarea>
+    <textarea rows="6" cols="80" name="plaintext"><%= plaintext %></textarea>
     <br><br><br>
     <textarea rows="6" cols="80" name="convertedText"><%= convertit %></textarea>
     <br><br><br>
-    <textarea rows="6" cols="80" name="againPlain"><%= againPlain %></textarea>
+    <font color="lime"><h1><p><%= againPlain %></p></h1></font>
     <br><br><br>
     <input type="submit" text="convert">
 
